<resources>
    <string name="app_name">Challenge Chapter 4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_account">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_pss">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="empty">Empty</string>
    <string name="logout">Logout</string>
    <string name="hallo">Hallo, Username!</string>
    <string name="empty_text">Is in empty, \n click + to add schedule</string>
    <string name="title">Title</string>
    <string name="desc_text">What schedule will be planned?</string>
    <string name="date">Date</string>
    <string name="add_new_schedule">Add new schedule</string>
    <string name="new_schedule">New Schedule</string>
    <string name="create">Create</string>
    <string name="create">Create</string>
</resources>