<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_title"
        android:text="@string/new_schedule"
        android:layout_marginTop="48dp"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_add"
        android:layout_margin="30dp"
        app:contentPadding="16dp"
        android:elevation="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_schedule"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/et_date"
                android:text="@string/title"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date"
                app:layout_constraintTop_toBottomOf="@id/et_schedule"
                app:layout_constraintEnd_toEndOf="@id/et_schedule"
                app:layout_constraintStart_toStartOf="@id/et_schedule"
                app:layout_constraintBottom_toTopOf="@id/et_desc"
                android:text="@string/date"
                android:drawableStart="@drawable/ic_baseline_calendar_today"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_desc"
                app:layout_constraintTop_toBottomOf="@id/et_date"
                app:layout_constraintEnd_toEndOf="@id/et_date"
                app:layout_constraintStart_toStartOf="@id/et_date"
                app:layout_constraintBottom_toTopOf="@id/btn_create"
                android:text="@string/desc_text"
                android:drawableStart="@drawable/ic_baseline_notes"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create"
                app:layout_constraintTop_toBottomOf="@id/et_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/create"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_marginBottom="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>